--- a/index.html
+++ b/index.html
@@ -28,9 +28,15 @@
         </aside>
 
         <main id="main-content">
-            <div id="viewer" class="view active">
+            <div id="viewer" class="view">
                 <div class="viewer-header">
-                    <h1 id="article-title"></h1>
+                    <div class="viewer-title-section">
+                        <button id="back-to-list-btn" class="icon-btn" title="Voltar para a lista">
+                            <svg xmlns="http://www.w3.org/2000/svg" width="20" height="20" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"><polyline points="15 18 9 12 15 6"></polyline></svg>
+                            <span>Voltar</span>
+                        </button>
+                        <h1 id="article-title"></h1>
+                    </div>
                     <div class="viewer-actions">
                         <button id="edit-article-btn" class="icon-btn" title="Editar Artigo">
                             <svg xmlns="http://www.w3.org/2000/svg" width="20" height="20" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"><path d="M11 4H4a2 2 0 0 0-2 2v14a2 2 0 0 0 2 2h14a2 2 0 0 0 2-2v-7"></path><path d="M18.5 2.5a2.121 2.121 0 0 1 3 3L12 15l-4 1 1-4 9.5-9.5z"></path></svg>
@@ -40,11 +46,40 @@
                         </button>
                     </div>
                 </div>
+                <div class="article-meta">
+                    <div id="article-tags-container"></div>
+                    <div id="article-last-updated"></div>
+                </div>
                 <div id="article-content" class="markdown-body"></div>
+            </div>
+
+            <div id="dashboard" class="view active">
+                 <div class="dashboard-header">
+                    <h2>Todos os Artigos</h2>
+                    <div class="dashboard-controls">
+                        <div class="control-group">
+                            <label for="filter-status">Status</label>
+                            <select id="filter-status">
+                                <option value="all">Todos</option>
+                                <option value="published">Publicado</option>
+                                <option value="draft">Rascunho</option>
+                            </select>
+                        </div>
+                        <div class="control-group">
+                            <label for="sort-by">Ordenar por</label>
+                            <select id="sort-by">
+                                <option value="updatedAt">Data de Modificação</option>
+                                <option value="createdAt">Data de Criação</option>
+                                <option value="title">Título</option>
+                            </select>
+                        </div>
+                    </div>
+                </div>
+                <div id="article-grid"></div>
                 <div id="welcome-message">
                     <svg xmlns="http://www.w3.org/2000/svg" width="64" height="64" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="1.5" stroke-linecap="round" stroke-linejoin="round"><path d="M14 2H6a2 2 0 0 0-2 2v16a2 2 0 0 0 2 2h12a2 2 0 0 0 2-2V8z"></path><polyline points="14 2 14 8 20 8"></polyline><line x1="16" y1="13" x2="8" y2="13"></line><line x1="16" y1="17" x2="8" y2="17"></line><polyline points="10 9 9 9 8 9"></polyline></svg>
-                    <h2>Bem-vindo à sua Base de Conhecimento</h2>
-                    <p>Selecione um artigo na barra lateral ou crie um novo para começar.</p>
+                    <h2>Sua base de conhecimento está vazia</h2>
+                    <p>Crie um novo artigo para começar.</p>
                 </div>
             </div>
 
@@ -54,6 +89,19 @@
                     <div class="form-group">
                         <label for="editor-title">Título</label>
                         <input type="text" id="editor-title" required>
+                    </div>
+                    <div class="form-group-inline">
+                         <div class="form-group">
+                            <label for="editor-tags">Tags (separadas por vírgula)</label>
+                            <input type="text" id="editor-tags" placeholder="ex: javascript, css, tutorial">
+                        </div>
+                        <div class="form-group">
+                            <label for="editor-status">Status</label>
+                            <select id="editor-status">
+                                <option value="published">Publicado</option>
+                                <option value="draft">Rascunho</option>
+                            </select>
+                        </div>
                     </div>
                     <div class="form-group">
                         <label for="editor-content">Conteúdo (Markdown suportado)</label>
@@ -71,7 +119,7 @@
     <script type="importmap">
     {
         "imports": {
-            "showdown": "https://cdnjs.cloudflare.com/ajax/libs/showdown/2.1.0/showdown.min.js"
+            "showdown": "https://esm.sh/showdown@2.1.0"
         }
     }
     </script>
